--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.5.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
+    "rc-slider": "^10.3.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^6.2.1",
