--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
@@ -29,6 +25,9 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/node": "^20.8.6",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "dotenv": "^16.3.1",
     "prisma": "^5.3.1"
   }
