--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@types/html2canvas": "^1.0.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
+    "html2canvas": "^1.4.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "rc-slider": "^10.3.0",
