changed hosting for images

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SERVER_ADDRESS="https://statify.world"
-NEXT_PUBLIC_IMAGES_HOSTING_ADDRESS="https://statify-images.static.domains"
+NEXT_PUBLIC_IMAGES_HOSTING_ADDRESS="https://statify-images.netlify.app"
