--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.6",
