Added ability to search indicators in specific countries. Some other small changes

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SERVER_ADDRESS="https://statify.world"
 NEXT_PUBLIC_IMAGES_HOSTING_ADDRESS="https://statify-images.netlify.app"
+RESULTS_PER_PAGE=45
