--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "rc-slider": "^10.3.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.13",
     "dotenv": "^16.3.1",
     "prisma": "^5.3.1"
