--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "@types/html2canvas": "^1.0.0",
+    "@types/react-virtualized": "^9.21.30",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
@@ -25,6 +26,7 @@
     "react-colorful": "^5.6.1",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "react-virtualized": "^9.22.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "xlsx": "^0.18.5"
