--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.13",
     "dotenv": "^16.3.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
     "prisma": "^5.3.1"
   }
 }
