--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/html2canvas": "^1.0.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
     "html2canvas": "^1.4.1",
     "next": "13.4.19",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.29",
     "rc-slider": "^10.3.0",
     "react": "18.2.0",
@@ -25,18 +27,23 @@
     "react-colorful": "^5.6.1",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.13",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.4.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    "prisma": "^5.3.1"
+    "prisma": "^5.3.1",
+    "sass": "^1.78.0"
   }
 }
