--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "@types/html2canvas": "^1.0.0",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
