--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "dotenv -e .env.local -- npx prisma migrate dev --name init"
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
@@ -35,7 +35,14 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@next/swc-win32-x64-msvc": "^14.2.11",
+    "@swc/core": "^1.7.26",
+    "@swc/jest": "^0.2.36",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-color": "^3.0.12",
@@ -44,7 +51,10 @@
     "dotenv-cli": "^7.4.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prisma": "^5.3.1",
-    "sass": "^1.78.0"
+    "sass": "^1.78.0",
+    "ts-node": "^10.9.2"
   }
 }
