Added Switch component and indicators table in dashboard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       "@design-system": ["./src/styles/foundation/_all.scss"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/containers/indicators-dashboard-table/components/indicators-dashboard-table-row"
+  ],
   "exclude": ["node_modules"]
 }
