--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.3.1",
     "@types/html2canvas": "^1.0.0",
     "@vercel/analytics": "^1.3.1",
