--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "prettier",
+    "typescript"
+  ],
+  "plugins": ["jest"],
+  "env": {
+    "jest/globals": true
+  }
 }
