--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.3.1",
     "@types/html2canvas": "^1.0.0",
+    "@typescript-eslint/parser": "^8.6.0",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
+    "eslint-plugin-jest": "^28.8.3",
     "html2canvas": "^1.4.1",
     "next": "13.4.19",
     "next-auth": "^4.24.7",
@@ -51,6 +54,8 @@
     "dotenv-cli": "^7.4.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-typescript": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prisma": "^5.3.1",
