--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.8.6",
