--- a/package.json
+++ b/package.json
@@ -13,18 +13,14 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.3.1",
-    "@types/html2canvas": "^1.0.0",
-    "@typescript-eslint/parser": "^8.6.0",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
-    "eslint-plugin-jest": "^28.8.3",
     "html2canvas": "^1.4.1",
     "next": "13.4.19",
     "next-auth": "^4.24.7",
-    "postcss": "8.4.29",
     "rc-slider": "^10.3.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -51,16 +47,20 @@
     "@types/react": "^18.2.28",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.13",
+    "@typescript-eslint/parser": "^8.6.0",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.4.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-jest": "^28.8.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.47",
     "prisma": "^5.3.1",
     "sass": "^1.78.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.6.0"
   }
 }
