--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "xlsx": "^0.18.5",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@swc/core": "^1.7.26",
