Deleted unused code

--- a/.prettierrc
+++ b/.prettierrc
@@ -11,10 +11,12 @@
     "^@/components/(?!.*\\.scss$)(.*)$",
     "^@/providers/(?!.*\\.scss$)(.*)$",
     "^@/hooks/(?!.*\\.scss$)(.*)$",
+    "^@/store/(?!.*\\.scss$)(.*)$",
     "^@/utils/(?!.*\\.scss$)(.*)$",
     "^@/test-utils/(?!.*\\.scss$)(.*)$",
     "^@/api/(?!.*\\.scss$)(.*)$",
     "^@/constants/(?!.*\\.scss$)(.*)$",
+    "^@/types/(?!.*\\.scss$)(.*)$",
     "^@/(?!.*\\.types.scss$)(.*)$",
     "^@/(?!.*\\.scss$)(.*)$",
     "^.+\\.scss$",
