--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-virtualized": "^9.22.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "xlsx": "^0.18.5",
@@ -48,6 +49,7 @@
     "@types/react": "^18.2.28",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.13",
+    "@types/react-virtualized": "^9.21.30",
     "@typescript-eslint/parser": "^8.6.0",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.4.2",
