--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,14 +3,13 @@ name: CI / Testing
 on:
   pull_request:
     branches:
-      - '**'
+      - "**"
   push:
     branches:
-      - '**'
+      - "**"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -18,20 +17,13 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
 
-      # mock envs to check build 
-      env:
-        AUTH_SECRET: "secret"
-        SERVER_ADDRESS: "https://localhost:3000"
-        NEXT_PUBLIC_IMAGES_HOSTING_ADDRESS: "https://localhost:3000"
-        RESULTS_PER_PAGE: 45
-      
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
