--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,7 +9,11 @@ jobs:
   build:
     env:
       AUTH_SECRET: "secret"
-
+      DATABASE_URL: "postgresql://postgres:1111@localhost:5432/statify"
+      RESULTS_PER_PAGE: "45"
+      NEXT_PUBLIC_SERVER_ADDRESS: "http://localhost:3000"
+      NEXT_PUBLIC_IMAGES_HOSTING_ADDRESS: "https://statify-images.netlify.app"
+   
     runs-on: ubuntu-latest
 
     strategy:
