--- a/core/package.json
+++ b/core/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.3.1",
+    "@unocss/reset": "^0.64.1",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
@@ -30,7 +31,6 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-virtualized": "^9.22.5",
-    "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "xlsx": "^0.18.5",
     "yup": "^1.4.0",
