Settuped e2e environment with test db mocking

--- a/core/package.json
+++ b/core/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env ENV_FILE=.env.dev next dev",
     "build": "npx prisma generate && next build",
+    "build:test": "cross-env ENV_FILE=.env.test npx prisma generate && cross-env ENV_FILE=.env.test next build",
+    "e2e:dev": "cross-env ENV_FILE=.env.test next dev",
+    "e2e": "npx prisma generate && cross-env ENV_FILE=.env.test SSG=false next build && cross-env ENV_FILE=.env.test next start",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -51,6 +54,7 @@
     "@types/react-dom": "^18.2.13",
     "@types/react-virtualized": "^9.21.30",
     "@typescript-eslint/parser": "^8.6.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.4.2",
     "eslint": "8.57.0",
