--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["cypress/tests/**/*.ts", "cypress/support/**/*.ts"],
   "compilerOptions": {
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "types": ["cypress", "node"],
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
