--- a/core/package.json
+++ b/core/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-jest": "^28.8.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-runner-groups": "^2.2.0",
     "postcss": "^8.4.47",
     "prisma": "^5.3.1",
     "sass": "^1.78.0",
