--- a/e2e/package.json
+++ b/e2e/package.json
@@ -2,7 +2,7 @@
   "name": "statify-e2e",
   "version": "1.0.0",
   "scripts": {
-    "cypress:open": "cypress open",
+    "cypress:open": "cypress open --browser chrome -e TAGS=\"not @skip\"",
     "cypress:open:smoke": "cypress open --browser chrome -e TAGS=\"@smoke\"",
     "cypress:open:feature": "cypress open --browser chrome -e TAGS=\"@feature\"",
     "cypress:open:regression": "cypress open --browser chrome -e TAGS=\"@regression\"",
@@ -17,15 +17,22 @@
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^21.0.3",
     "@cypress/webpack-preprocessor": "^6.0.2",
+    "@panva/hkdf": "^1.2.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "cypress": "^13.15.2",
     "cypress-commands": "^3.0.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-wait-until": "^3.0.2",
     "dotenv": "^16.4.5",
+    "jose": "^5.9.6",
+    "js-crypto-hkdf": "^1.0.7",
+    "jsonwebtoken": "^9.0.2",
     "ts-loader": "^9.5.1"
   },
   "devDependencies": {
-    "@types/cypress-cucumber-preprocessor": "^4.0.5"
+    "@types/cypress-cucumber-preprocessor": "^4.0.5",
+    "@types/jsonwebtoken": "^9.0.7"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": false,
