--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,7 @@ jobs:
       RESULTS_PER_PAGE: "45"
       NEXT_PUBLIC_SERVER_ADDRESS: "http://localhost:3000"
       NEXT_PUBLIC_IMAGES_HOSTING_ADDRESS: "https://statify-images.netlify.app"
+      NEXT_PUBLIC_LANG: "en"
 
     runs-on: ubuntu-latest
 
